# sft-dataset-creator

./: .env.example  .gitignore  README.md  pyproject.toml  run.db
docs/: architecture.md  artigo-pipeline-sft.tex  formalizacao-pipeline.md  running.md
examples/: gemma-wikipedia.json  local-fake.json  wiki-brazil-smoke-10pct.json  wiki-brazil-smoke.json
outputs/wiki-brazil-smoke-10pct-train-only/: config.resolved.json
outputs/wiki-brazil-smoke-10pct-train-only/exports/: README.md  dataset_info.json
outputs/wiki-brazil-smoke-10pct-train-only/exports/alpaca/: train.jsonl
outputs/wiki-brazil-smoke-10pct-train-only/exports/messages/: train.jsonl
outputs/wiki-brazil-smoke-10pct-train-only/exports/prompt_completion/: train.jsonl
sft_dataset_creator/: __init__.py  __main__.py  audit.py  backends.py  checkpoints.py  chunking.py  cli.py  config.py  dashboard.py  doctor.py  document_store.py  engine.py  evaluators.py  exporters.py  locks.py  metrics.py  models.py  planner.py  preflight.py  profiles.py  progress.py  prompts.py  publisher.py  quality.py  registry.py  sources.py  state.py  tasks.py  tuning.py  wizard.py
tests/: conftest.py  test_audit.py  test_batching.py  test_chunking.py  test_cli.py  test_config.py  test_doctor.py  test_engine.py  test_evaluators.py  test_exporter.py  test_hf_publisher.py  test_long_runs.py  test_normalizer.py  test_planner.py  test_profiles.py  test_publisher.py  test_quality.py  test_schemas.py  test_sources.py  test_tasks.py  test_triage.py
tools/dataset_unchunker/: README.md  pyproject.toml
tools/dataset_unchunker/dataset_unchunker/: __init__.py  __main__.py  cli.py  grouping.py  loaders.py  publish.py  reconstruct.py  reports.py  schema.py
tools/dataset_unchunker/examples/: stf_acordaos.sh
tools/dataset_unchunker/tests/: test_cli.py  test_reconstruct.py
wiki_if_builder/: __init__.py  __main__.py  analyst.py  cli.py  config.py  dataset_loader.py  exporter.py  hf_publisher.py  judge.py  llm_client.py  normalizer.py  prompts.py  schemas.py  triage.py  utils.py
