[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wiki-if-builder"
version = "0.1.0"
description = "MVP local para labeling documental e dataset Instruction Following a partir da Wikipedia pt-BR."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "wiki-if-builder contributors" }]
dependencies = [
    "datasets>=2.19.0",
    "pydantic>=2.7.0",
    "openai>=1.30.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "orjson>=3.10.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "pytest>=8.0.0",
    "huggingface_hub>=0.23.0",
    "pyarrow>=15.0.0",
    "psutil>=5.9.0",
]

[project.scripts]
wiki-if-builder = "wiki_if_builder.cli:app"

[tool.setuptools.packages.find]
include = ["wiki_if_builder*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

