[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sft-dataset-creator"
version = "0.3.0"
description = "Plan, generate, evaluate, and publish reproducible synthetic SFT datasets."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "sft-dataset-creator contributors" }]
dependencies = [
    "pydantic>=2.10,<3",
    "typer>=0.15,<1",
    "rich>=13.9,<15",
    "InquirerPy>=0.3.4,<1",
    "orjson>=3.10,<4",
    "tenacity>=9,<10",
    "psutil>=6,<8",
]

[project.optional-dependencies]
hf = [
    "datasets>=3,<5",
    "huggingface_hub>=0.30,<2",
    "pyarrow>=18,<24",
]
openai = ["openai>=1.60,<3"]
local = ["vllm>=0.23,<0.24"]
dev = [
    "pytest>=8,<10",
    "pytest-cov>=6,<8",
]
all = [
    "datasets>=3,<5",
    "huggingface_hub>=0.30,<2",
    "pyarrow>=18,<24",
    "openai>=1.60,<3",
    "vllm>=0.23,<0.24",
]

[project.scripts]
sft-dataset = "sft_dataset_creator.cli:app"

[project.entry-points."sft_dataset_creator.sources"]
local = "sft_dataset_creator.sources:LocalFileSource"
huggingface = "sft_dataset_creator.sources:HuggingFaceSource"

[project.entry-points."sft_dataset_creator.evaluators"]
composite = "sft_dataset_creator.evaluators:CompositeEvaluator"

[tool.setuptools.packages.find]
include = ["sft_dataset_creator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "gpu: requires local GPUs and model downloads",
]
